--- a/index.ipynb
+++ b/index.ipynb
@@ -23,7 +23,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -46,10 +46,16 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [],
-   "source": []
+   "source": [
+    "class KNN():\n",
+    "    def fit():\n",
+    "        pass\n",
+    "    def predict():\n",
+    "        pass"
+   ]
   },
   {
    "cell_type": "markdown",
@@ -70,15 +76,16 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [],
    "source": [
     "def fit(self, X_train, y_train):\n",
-    "    pass\n",
+    "    self.X_train = X_train\n",
+    "    self.y_train = y_train\n",
     "    \n",
     "# This line updates the knn.fit method to point to the function we've just written\n",
-    "KNN.fit = fit"
+    "KNN.fit = fit\n"
    ]
   },
   {
@@ -101,12 +108,18 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [],
    "source": [
     "def _get_distances(self, x):\n",
-    "    pass\n",
+    "    distances = []\n",
+    "    for ind, val in enumerate(self.X_train):\n",
+    "        dist_to_i = euc(x, val)\n",
+    "        distances.append((ind, dist_to_i))\n",
+    "    return distances\n",
+    "        \n",
+    "    \n",
     "\n",
     "# This line attaches the function we just created as a method to our KNN class.\n",
     "KNN._get_distances = _get_distances"
@@ -132,12 +145,13 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [],
    "source": [
     "def _get_k_nearest(self, dists, k):\n",
-    "    pass\n",
+    "    sorted_dists = sorted(dists, key=lambda x: x[1])\n",
+    "    return sorted_dists[:k]\n",
     "\n",
     "# This line attaches the function we just created as a method to our KNN class.\n",
     "KNN._get_k_nearest = _get_k_nearest"
@@ -158,12 +172,14 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 7,
    "metadata": {},
    "outputs": [],
    "source": [
     "def _get_label_prediction(self, k_nearest):\n",
-    "    pass\n",
+    "    labels = [self.y_train[i] for i, _ in k_nearest]\n",
+    "    counts = np.bincount(labels)\n",
+    "    return np.argmax(counts)\n",
     "\n",
     "# This line attaches the function we just created as a method to our KNN class.\n",
     "KNN._get_label_prediction = _get_label_prediction"
@@ -203,12 +219,18 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 8,
    "metadata": {},
    "outputs": [],
    "source": [
     "def predict(self, X_test, k=3):\n",
-    "    pass\n",
+    "    preds = []\n",
+    "    for i in X_test:\n",
+    "        dists = self._get_distances(i)\n",
+    "        k_nearest = self._get_k_nearest(dists, k)\n",
+    "        predicted_label = self._get_label_prediction(k_nearest)\n",
+    "        preds.append(predicted_label)\n",
+    "    return preds\n",
     "        \n",
     "KNN.predict = predict"
    ]
@@ -228,7 +250,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 9,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -250,11 +272,11 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 11,
    "metadata": {},
    "outputs": [],
    "source": [
-    "X_train, X_test, y_train, y_test = None"
+    "X_train, X_test, y_train, y_test = train_test_split(data, target, test_size=0.25)"
    ]
   },
   {
@@ -266,11 +288,12 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 12,
    "metadata": {},
    "outputs": [],
    "source": [
-    "knn = None"
+    "knn = KNN()\n",
+    "knn.fit(X_train, y_train)"
    ]
   },
   {
@@ -282,11 +305,11 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 14,
    "metadata": {},
    "outputs": [],
    "source": [
-    "preds = None"
+    "preds = knn.predict(X_test)"
    ]
   },
   {
@@ -298,11 +321,19 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 16,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Testing Accuracy: 0.9736842105263158\n"
+     ]
+    }
+   ],
    "source": [
-    "print(\"Testing Accuracy: {}\".format(accuracy_score(None, None)))\n",
+    "print(\"Testing Accuracy: {}\".format(accuracy_score(y_test, preds)))\n",
     "# Expected Output: Testing Accuracy: 0.9736842105263158"
    ]
   },
@@ -339,7 +370,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.6.4"
+   "version": "3.6.6"
   }
  },
  "nbformat": 4,
